# bid-ask-record-py

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  HOWTO.txt  README.md  blockchain_aware_analysis.py  clear_data_tables.py  create_order_book_views.py  market_data.db  mypy.ini  pyproject.toml  query_order_book_examples.py  requirements-dev.txt  requirements.txt  setup_dev.sh  simple_fm_test.py  test_websocket.py  trade_impact_analysis.py  trade_orderbook_correlation.py  trade_orderbook_queries.sql
.claude/: settings.local.json
bidaskrecord/: __init__.py  __main__.py  cli.py  db.py
bidaskrecord/config/: __init__.py  settings.py
bidaskrecord/core/: __init__.py  websocket_client.py
bidaskrecord/models/: __init__.py  base.py  market_data.py  order_book.py  order_book_raw.py
bidaskrecord/utils/: __init__.py  logging.py  metrics.py
migrations/: env.py
migrations/versions/: ad7907e30558_add_full_order_book_depth_tables.py  cba25b240e75_add_received_at_timestamp_column_to_.py  fa0391f5ea16_add_display_columns_to_trade_table.py
scripts/: check_code.sh  init_db.py  run_websocket_client.py  test_websocket_models.py
test_output/: websocket_messages_20250718_103707.json  websocket_messages_20250718_104220.json  websocket_messages_20250718_104428.json  websocket_messages_20250718_105253.json  websocket_messages_20250718_110839.json  websocket_messages_20250718_154730.json  websocket_messages_20250718_154900.json  websocket_messages_20250718_155130.json  websocket_messages_20250718_155400.json  websocket_messages_20250718_155630.json  websocket_messages_20250718_155900.json  websocket_messages_20250718_160130.json  websocket_messages_20250718_160400.json  websocket_messages_20250718_160630.json  websocket_messages_20250718_160900.json  websocket_messages_20250718_161130.json  websocket_messages_20250718_161400.json  websocket_messages_20250718_161514.json
