[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bidaskrecord"
version = "0.1.0"
description = "A utility to record bid-ask data from Figure Markets Exchange"
authors = [
    { name = "Frank Siebenlist", email = "frank@siebenlist.net" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "websockets>=11.0.3",
    "SQLAlchemy>=2.0.23",
    "alembic>=1.12.1",
    "pydantic>=2.5.2",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "click>=8.1.7",
    "python-dateutil>=2.8.2",
    "psycopg2-binary>=2.9.9; platform_system != 'Windows'",
    "psycopg2>=2.9.9; platform_system == 'Windows'"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.9.1",
    "isort>=5.12.0",
    "mypy>=1.5.1",
    "pylint>=3.0.2",
    "pytest-mock>=3.11.1",
    "types-python-dateutil>=2.8.19",
    "types-psycopg2>=2.9.21",
    "sqlalchemy2-stubs>=0.0.2a35",
    "pre-commit>=3.3.3"
]

[project.scripts]
bidaskrecord = "bidaskrecord.cli:main"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["sqlalchemy.*", "alembic.*"]
ignore_missing_imports = true
